# kkbox-churn-prediction

./: .gitignore  00_data_processing.ipynb  01_EDA.ipynb  02_Feature_Engineering.ipynb  03_Model_Architecture.ipynb  03a_CatBoost_and_Cox_Models.ipynb  03b_Hyperparameter_Tuning.ipynb  03c_ZILN_ForwardRevenue.ipynb  04_Calibration_and_Business_Layer.ipynb  04_Training_Baselines.ipynb  05_Final_Evaluation_Summary.ipynb  05_MultiTask_Ablation.ipynb  06_Calibration_and_Business_Layer.ipynb  06_NeuralNet_MultiTask_Appendix.ipynb  07_Final_Evaluation_Summary.ipynb  LICENSE  Makefile  PORTFOLIO.md  README.md  config.yaml  project_report.md  pyproject.toml  report.md  requirements.txt  run_pipeline.sh
data/: README.md
docs/: reproducibility.md
models/: catboost_churn.cbm  catboost_cox.cbm  catboost_fwd_rev.cbm  catboost_pay_clf.cbm  exp1_churn_only.pt  exp2_ltv_only.pt  exp3_fixed_5050.pt  exp4_churn_dominant.pt  exp5_ltv_dominant.pt  exp6_uncertainty.pt  exp7_pcgrad.pt  ziln_ensemble_manifest.json  ziln_seed42.pt  ziln_seed43.pt  ziln_seed44.pt  ziln_seed45.pt  ziln_seed46.pt
results/: ablation_results_table.csv  baseline_results.json  catboost_results.json  cox_results.json  exp1_history.csv  exp2_history.csv  exp3_fixed_5050_history.csv  exp4_churn_dominant_history.csv  exp5_ltv_dominant_history.csv  exp6_history.csv  exp7_history.csv  final_model_metrics.json  fwd_rev_model_choice.json  optuna_best_params.json  ziln_results.json
src/kkbox/: __init__.py  (+12 more)
tests/: conftest.py  test_encoders.py  test_labels.py  test_model_shapes.py  test_scaler.py  test_smoke_e2e.py
(+1 files in other folders)
