[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kkbox"
version = "0.1.0"
description = "Churn and forward-revenue prediction on the KKBox WSDM 2017 dataset (CatBoost + Cox survival, ZILN neural net as challenger)"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.3",
    "pandas==3.0.1",
    "scikit-learn==1.8.0",
    "torch==2.12.1",
    "duckdb==1.5.3",
    "pyarrow==23.0.1",
    "py7zr==1.1.3",
    "joblib==1.5.3",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "catboost==1.2.10",
    "lifelines==0.30.3",
    "pyyaml>=6.0",
    "optuna==4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipykernel==7.2.0",
    "nbconvert>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
